--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Hellow tawlaind welcome to my procect</title>
+  <title>Nahid - Shoping</title>
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.3.0/css/all.css">
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.3.0/css/sharp-solid.css">
   <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.3.0/css/sharp-regular.css">
@@ -125,34 +125,34 @@
      <div class="title">
        <h1  class="text-[48px] uppercase text-[#363958] font-semibold">Man Jacket</h1>
      </div>
-     <div class="card_box_container mt-12 grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-20 ">
-           <div class="crads 2xl:px-5 mt-12">
+     <div class="card_box_container mt-12 grid grid-cols-1 md:grid-cols-2  lg:grid-cols-3 gap-20 ">
+           <div class="crads max-w-[350px] mx-auto lg:mx-0  2xl:px-5 mt-12">
               <div class="card_img flex justify-center mb-5">
-                <img class="w-[80%]"  src="images/jacket-4.png" alt="">
-              </div>
-              <h1  class="text-[24px] capitalize text-[#363958] font-semibold  ">Snowboard Jacket Mens</h1> 
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-              <div class="prizes flex items-center justify-between">
-                <h2 class="pri text-[36px] font-bold text-[#FABE4C]">$234</h2> 
-                <button class= " hover:scale-95 font-bold transition-all  bg-[#85A019] px-7  py-4 rounded-md uppercase text-[#FFFFFF]  text-lg mt-4"> <i class="fas fa-shopping-cart mr-2"></i> buy now</button>
-              </div>  
-           </div>         
-             <div class="crads 2xl:px-5 mt-12">
-              <div class="card_img flex justify-center mb-5">
-                <img class="w-[80%]" src="images/jacket-5.png" alt="">
-              </div>
-              <h1  class="text-[24px] capitalize text-[#363958] font-semibold gap-8 ">Man Leather Jackets</h1> 
-              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-              <div class="prizes flex items-center justify-between">
-                <h2 class="pri text-[36px] font-bold text-[#FABE4C]">$234</h2> 
-                <button class= " hover:scale-95 font-bold transition-all  bg-[#85A019] px-7  py-4 rounded-md uppercase text-[#FFFFFF]  text-lg mt-4"> <i class="fas fa-shopping-cart mr-2"></i> buy now</button>
-              </div>  
-           </div>         
-             <div class="crads 2xl:px-5 mt-12">
-              <div class="card_img flex justify-center mb-5"> 
                 <img class="w-[80%]"  src="images/jacket-6.png" alt="">
+              </div> 
+              <h1  class="text-[24px] capitalize text-[#363958] font-semibold  ">black Coat Jacket </h1> 
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <div class="prizes flex items-center justify-between">
+                <h2 class="pri text-[36px] font-bold text-[#FABE4C]">$234</h2> 
+                <button class= " hover:scale-95 font-bold transition-all  bg-[#85A019] px-7  py-4 rounded-md uppercase text-[#FFFFFF]  text-lg mt-4"> <i class="fas fa-shopping-cart mr-2"></i> buy now</button>
+              </div>  
+           </div>         
+             <div class="crads max-w-[350px] mx-auto lg:mx-0  2xl:px-5 mt-12">
+              <div class="card_img flex justify-center mb-5">
+                <img class="w-[80%]" src="images/jacket-4.png" alt="">
               </div>
-              <h1  class="text-[24px] capitalize text-[#363958] font-semibold gap-8 ">Man Casual Jackets</h1> 
+              <h1  class="text-[24px] capitalize text-[#363958] font-semibold gap-8 ">mans Jacket </h1> 
+              <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+              <div class="prizes flex items-center justify-between">
+                <h2 class="pri text-[36px] font-bold text-[#FABE4C]">$234</h2> 
+                <button class= " hover:scale-95 font-bold transition-all  bg-[#85A019] px-7  py-4 rounded-md uppercase text-[#FFFFFF]  text-lg mt-4"> <i class="fas fa-shopping-cart mr-2"></i> buy now</button>
+              </div> 
+           </div>         
+             <div class="crads max-w-[350px] mx-auto lg:mx-0  2xl:px-5 mt-12">
+              <div class="card_img flex justify-center mb-5"> 
+                <img class="w-[80%]"  src="images/jacket-5.png" alt=""> 
+              </div>
+              <h1  class="text-[24px] capitalize text-[#363958] font-semibold gap-8 ">mans Leather Jacket </h1> 
               <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
               <div class="prizes flex items-center justify-between">
                 <h2 class="pri text-[36px] font-bold text-[#FABE4C]">$234</h2> 
@@ -197,7 +197,7 @@
             </div>
           </div>
         </div>
-        <div class="shoping_profile order-1">
+        <div class="shoping_profile order-1 lg:order-2">
           <img src="images/shopping.png" alt="">
         </div>
       </div>
